# Glybook

./: README.md  database.sql
source/: CMakeLists.txt  Glybook.aps  Glybook.cpp  Glybook.vcxproj  Glybook.vcxproj.filters  accountdialog.cpp  accountdialog.h  accountdialog.ui  accounthistory.cpp  accounthistory.h  accounthistory.ui  bibliotheque.cpp  bibliotheque.h  book.cpp  book.h  bookdialog.cpp  bookdialog.h  bookdialog.ui  bookinformation.cpp  bookinformation.h  bookinformation.ui  borrow.cpp  borrow.h  catalog.cpp  catalog.h  catalog.ui  categorie.cpp  categorie.h  connection.cpp  connection.h  connection.ui  connexion.cpp  connexion.h  connexion.ui  cryptohashclass.h  dbconnection.cpp  dbconnection.h  dialog.cpp  dialog.h  dialog.ui  (+36 more)
source/Release/Glybook.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Glybook.lastbuildstate  Glybook.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: CMakeLists.txt  Glybook.cpp  accountdialog.cpp  accountdialog.h  accountdialog.ui  accounthistory.h  book.cpp  bookdialog.cpp  bookdialog.h  bookinformation.cpp  bookinformation.h  bookinformation.ui  catalog.h  connection.cpp  connection.ui  cryptohashclass.cpp  dbconnection.cpp  dbconnection.h  genre.cpp  glybook.ui  initialization.ui  library.cpp  library.h  loandialog.cpp  loandialog.h  loandialog.ui  main.cpp  manageaccounts.h  manageaccounts.ui  myaccount.cpp  myaccount.ui  reservation.cpp  resource.qrc  settings.cpp  settings.ui  statistics.cpp  statistics.ui  user.h
